--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -3,6 +3,7 @@
     <mat-card-title>Actions</mat-card-title>
     <mat-card-actions>
       <button mat-button
+              (click)="addItem()"
               color="primary">Add New Item</button>
     </mat-card-actions>
   </mat-card>
@@ -38,14 +39,11 @@
     <mat-card-title>Projects</mat-card-title>
     <mat-card-content>Todo Items assigned to a Project</mat-card-content>
     <mat-card-actions>
-      <button mat-button>
-        <mat-chip>
-          <mat-icon>event</mat-icon> New Courses (12)
-        </mat-chip>
-      </button>
-      <button mat-button>
-        <mat-chip>
-          <mat-icon>event</mat-icon> House Work (3)
+      <button mat-button
+              *ngFor="let project of projects$ | async">
+        <mat-chip [routerLink]=""
+                  [queryParams]="{ 'project': project.name }">
+          <mat-icon>event</mat-icon> {{ project.name }} ({{ project.count }})
         </mat-chip>
       </button>
     </mat-card-actions>
